--- a/C#/RobotInterface/MainWindow.xaml
+++ b/C#/RobotInterface/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Name="Fenetre" x:Class="RobotInterface.MainWindow"
+﻿
+    <Window x:Name="Fenetre" x:Class="RobotInterface.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -30,7 +31,7 @@
             <ColumnDefinition Width="30"/>
         </Grid.ColumnDefinitions>
         <GroupBox x:Name="Emission" Header="" Margin="10,0,0,10" Grid.Column="1"  BorderBrush="#FF020406" OpacityMask="Black" Grid.Row="1" >
-            <TextBox x:Name="textBoxEmission" HorizontalAlignment="Stretch" Height="Auto" Margin="0" TextWrapping="Wrap" AcceptsReturn="true" VerticalAlignment="Stretch" Width="Auto" Text="ddddd" KeyUp="textBoxEmission_KeyUp"/>
+            <TextBox x:Name="textBoxEmission" HorizontalAlignment="Stretch" Height="Auto" Margin="0" TextWrapping="Wrap" AcceptsReturn="true" VerticalAlignment="Stretch" Width="Auto" KeyUp="textBoxEmission_KeyUp"/>
         </GroupBox>
         <GroupBox x:Name="Réception" Header="" Margin="10,0,0,10" Grid.Column="3" Background="{DynamicResource {x:Static SystemColors.GradientActiveCaptionBrushKey}}" BorderBrush="#FF020406" OpacityMask="Black" Grid.Row="1">
             <TextBox x:Name="textBoxReception" HorizontalAlignment="Stretch" Height="Auto" TextWrapping="Wrap" AcceptsReturn="true" VerticalAlignment="Stretch" Width="Auto" IsReadOnly="True"/>
