--- a/C#/RobotInterface/MainWindow.xaml
+++ b/C#/RobotInterface/MainWindow.xaml
@@ -6,37 +6,49 @@
         xmlns:local="clr-namespace:RobotInterface"
         mc:Ignorable="d"
         Title="MainWindow" Width="828" Height="579">
-  <Grid x:Name="grille" Margin="0,0,2,7" RenderTransformOrigin="0.5,0.5">
-    <Grid.RowDefinitions>
-      <RowDefinition Height="30"/>
-      <RowDefinition Height="1*"/>
-      <RowDefinition Height="30"/>
-      <RowDefinition Height="30"/>
-      <RowDefinition Height="30"/>
-    </Grid.RowDefinitions>
-    <Grid.RenderTransform>
-      <TransformGroup>
-        <ScaleTransform/>
-        <SkewTransform/>
-        <RotateTransform Angle="0.031"/>
-        <TranslateTransform/>
-      </TransformGroup>
-    </Grid.RenderTransform>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="30"/>
-      <ColumnDefinition/>
-      <ColumnDefinition Width="30"/>
-      <ColumnDefinition/>
-      <ColumnDefinition Width="30"/>
-    </Grid.ColumnDefinitions>
-    <GroupBox x:Name="Emission" Header="" Margin="10,0,0,10" Grid.Column="1"  BorderBrush="#FF020406" OpacityMask="Black" Grid.Row="1" >
-      <TextBox x:Name="textBoxEmission" HorizontalAlignment="Stretch" Height="Auto" Margin="0" TextWrapping="Wrap" AcceptsReturn="true" VerticalAlignment="Stretch" Width="Auto" KeyUp="textBoxEmission_KeyUp"/>
-    </GroupBox>
-    <GroupBox x:Name="Réception" Header="" Margin="10,0,0,10" Grid.Column="3" Background="{DynamicResource {x:Static SystemColors.GradientActiveCaptionBrushKey}}" BorderBrush="#FF020406" OpacityMask="Black" Grid.Row="1">
-      <TextBox x:Name="textBoxReception" HorizontalAlignment="Stretch" Height="Auto" TextWrapping="Wrap" AcceptsReturn="true" VerticalAlignment="Stretch" Width="Auto" IsReadOnly="True"/>
-    </GroupBox>
-    <Button x:Name="buttonEnvoyer" Content="Envoyer" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0" Grid.Row="3" VerticalAlignment="Stretch" Width="100" Height="30" Click="buttonEnvoyer_Click" KeyUp="textBoxEmission_KeyUp"/>
-    <Button x:Name="buttonClear" Content="Clear" Grid.Column="3" HorizontalAlignment="Stretch" Margin="0" Grid.Row="3" VerticalAlignment="Stretch" Width="100" Height="30" Click="buttonClear_Click" />
-    <Button x:Name="buttonTest" Content="Test" Grid.Column="3" HorizontalAlignment="Stretch" Margin="10,0,254,0" Grid.Row="3" VerticalAlignment="Stretch" Width="100" Height="30" Click="buttonTest_Click" />
-</Grid>
+    <Grid x:Name="grille" Margin="0,2,2,5" RenderTransformOrigin="0.5,0.5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+        <Grid.RenderTransform>
+            <TransformGroup>
+                <ScaleTransform/>
+                <SkewTransform/>
+                <RotateTransform Angle="0.031"/>
+                <TranslateTransform/>
+            </TransformGroup>
+        </Grid.RenderTransform>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="30"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="30"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="30"/>
+        </Grid.ColumnDefinitions>
+        <GroupBox x:Name="Emission" Header="" Margin="10,0,0,286" Grid.Column="1"  BorderBrush="#FFC9C99A" OpacityMask="Black" Grid.Row="1" >
+            <TextBox x:Name="textBoxEmission" HorizontalAlignment="Stretch" Height="Auto" Margin="0" TextWrapping="Wrap" AcceptsReturn="true" VerticalAlignment="Stretch" Width="Auto" KeyUp="textBoxEmission_KeyUp" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" SelectionBrush="#FFC9C99A"/>
+        </GroupBox>
+        <GroupBox x:Name="Check" Header="" Margin="10,203,287,136" Grid.Column="1"  BorderBrush="#FFC9C99A" OpacityMask="Black" Grid.Row="1" >
+            <TextBox x:Name="textBoxEmission" HorizontalAlignment="Stretch" Height="Auto" Margin="0" TextWrapping="Wrap" AcceptsReturn="true" VerticalAlignment="Stretch" Width="Auto" KeyUp="textBoxEmission_KeyUp" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" SelectionBrush="#FFC9C99A"/>
+            <CheckBox Content="LED1" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="15,223,0,0" Grid.Row="1" RenderTransformOrigin="0.749,15.53" Checked="CheckBox_Checked"/>
+            <CheckBox Content="LED2" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="15,243,0,0" Grid.Row="1" RenderTransformOrigin="0.749,15.53" Checked="CheckBox_Checked"/>
+            <CheckBox Content="LED3" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="15,263,0,0" Grid.Row="1" RenderTransformOrigin="0.749,15.53" Checked="CheckBox_Checked"/>
+        </GroupBox>
+        <GroupBox x:Name="Réception" Header="" Margin="10,0,0,286" Grid.Column="3" Background="{DynamicResource {x:Static SystemColors.DesktopBrushKey}}" BorderBrush="#FF020406" OpacityMask="Black" Grid.Row="1">
+            <TextBox x:Name="textBoxReception" HorizontalAlignment="Stretch" Height="Auto" TextWrapping="Wrap" AcceptsReturn="true" VerticalAlignment="Stretch" Width="Auto" IsReadOnly="True" SelectionBrush="#FFF3A6F3" TextChanged="textBoxReception_TextChanged">
+                <TextBox.Background>
+                    <ImageBrush Opacity="0.4" ImageSource="external-content.duckduckgo.com.jpg"/>
+                </TextBox.Background>
+            </TextBox>
+        </GroupBox>
+        <Button x:Name="buttonEnvoyer" Content="Envoyer" Grid.Column="1" HorizontalAlignment="Stretch" Margin="70,150,201,241" Grid.Row="1" VerticalAlignment="Stretch"   Click="buttonEnvoyer_Click" KeyUp="textBoxEmission_KeyUp"/>
+        <Button x:Name="buttonClear" Content="Clear" Grid.Column="3" HorizontalAlignment="Stretch" Margin="192,150,70,241" Grid.Row="1" VerticalAlignment="Stretch"   Click="buttonClear_Click" />
+        <Button x:Name="buttonTest" Content="Test" Grid.Column="3" HorizontalAlignment="Stretch" Margin="70,150,194,241" Grid.Row="1" VerticalAlignment="Stretch"   Click="buttonTest_Click" />
+        <Button x:Name="buttonFond" Content="Fond" Grid.Column="1" HorizontalAlignment="Stretch" Margin="185,150,70,241" Grid.Row="1" VerticalAlignment="Stretch"  Click="buttonFond_Click" />
+        <Button x:Name="buttonTestErreur" Content="Test Erreur" Grid.Column="3" HorizontalAlignment="Stretch" Margin="70,203,194,188" Grid.Row="1" VerticalAlignment="Stretch"   Click="buttonTestErreur_Click" />
+    </Grid>
 </Window>
